test ci change sh

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   script:
-    - cd $CI_PROJECT_DIR && ./bin/get-pce
+    - cd $CI_PROJECT_DIR && ./bin/get-pce.sh
     - echo "${KANIKOCONF}" | base64 -d > /kaniko/.docker/config.json
     - /kaniko/executor --build-arg "BUILDNO='${CI_JOB_ID}'" --build-arg "BRANCH='${CI_COMMIT_BRANCH}'" --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination us-central1-docker.pkg.dev/cgodwin-io/vuepress/cporg-web:devel-build-${CI_JOB_ID} --destination us-central1-docker.pkg.dev/cgodwin-io/vuepress/cporg-web:${CI_COMMIT_BRANCH}-build-latest
   only:
