--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "repository": "git@github.com:openordu/ordu-ui.git",
   "author": "Chris Godwin <patchshorts@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "vuepress": "^2.0.0-beta.39",
-    "vuepress-theme-hope": "^2.0.0-beta.45"
-  },
-  "peerDependencies": {
+  "dependencies": {
     "vuepress": "^2.0.0-beta.39",
     "vuepress-theme-hope": "^2.0.0-beta.45"
   },
