--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "repository": "git@github.com:openordu/ordu-ui.git",
   "author": "Chris Godwin <patchshorts@gmail.com>",
-  "license": "CCASAIPL",
+  "license": "CC-BY-SA-4.0",
   "dependencies": {
     "vuepress": "^2.0.0-beta.39",
     "vuepress-theme-hope": "^2.0.0-beta.45"
