--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Chris Godwin <patchshorts@gmail.com>",
   "license": "CC-BY-SA-4.0",
   "dependencies": {
-    "vuepress": "2.0.0-beta.39",
-    "vuepress-theme-hope": "2.0.0-beta.47"
+    "vuepress": "^2.0.0-beta.43",
+    "vuepress-theme-hope": "^2.0.0-beta.51"
   },
   "scripts": {
     "docs:dev": "./node_modules/.bin/vuepress dev src",
